# go-zhquiz

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  go-zhquiz.code-workspace  go.mod  go.sum  main.go  main.rc  package.json  robo.yml  runner.js  speak.sh  zhquiz-desktop.code-workspace
.github/workflows/: pkg.yml
.husky/: pre-commit
__packages__/desktop/: Info.plist  fallback.go  go.mod  go.sum  main.go  no_fallback.go  robo.yml
__packages__/desktop/public/: etabs.html  index.html
__packages__/golang/: go.mod  main.go
__packages__/nodejs/: package.json
__packages__/python/: cedict.py  pyproject.toml  tatoeba.py
__packages__/ui/: package.json  vue.config.js
assets/: .gitignore  README.md
desktop/: app.go  app_darwin.go  browser.go  chrome.go  desktop.go  messagebox.go  messagebox_windows.go  open.go
server/: server.go
server/api/: character.go  chinese.go  data_type.go  extra.go  hanzi.go  init.go  library.go  media.go  quiz.go  router.go  sentence.go  user.go  util.go  vocab.go
server/chinese/: entry.go  init.go
server/db/: data_type.go  deck.go  entry.go  extra.go  init.go  library.go  preset.go  quiz.go  tag.go  user.go  util.go  util_test.go
server/rand/: rand.go
server/util/: set.go
server/zh/: cedict.go  cedict.sql  cedict_read_test.go  init.go  init_test.go  library.go  library.sql  library_read_test.go  sentence.go  tag.go  tatoeba.go  tatoeba.sql  tatoeba_alter_test.go  tatoeba_read_test.go  token.go  token.sql  token_alter_test.go  token_read_test.go  vocab.go
shared/: path.go  shared.go  var.go
(+91 files in other folders)
