[tool.poetry]
name = "zhquiz"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt <polv@polv.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wordfreq = "^2.5.0"
jieba = "^0.42.1"
requests = "^2.25.1"
regex = "^2021.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
